--- a/cert_request/cert_request/static/html/cert_request.html
+++ b/cert_request/cert_request/static/html/cert_request.html
@@ -1,11 +1,11 @@
 <p> On Demand Certificate XBlock </p>
+
 % if show_generate_cert_btn:
           <div class="wrapper-msg wrapper-auto-cert">
             <div id="errors-info" class="errors-info"></div>
             % if passed:
             <div class="auto-cert-message" id="course-success">
               <div class="has-actions">
-                  <% post_url = reverse('generate_user_cert', args=[unicode(course.id)]) %>
                   % if is_downloadable:
                   <div class="msg-content">
                     <h2 class="title">Your certificate is available</h2>
@@ -31,17 +31,35 @@
                     <p class="copy">We're creating your certificate. You can keep working in your courses and a link to it will appear here and on your Dashboard when it is ready.</p>
                   </div>
                   <div class="msg-actions"></div>
+
+		
                   % else:
                   <div class="msg-content">
                     <h2 class="title">Congratulations, you qualified for a certificate!</h2>
                     <p class="copy">You can keep working for a higher grade, or request your certificate now.</p>
                   </div>
                   <div class="msg-actions">
-                    <button class="btn generate_certs" data-endpoint="${post_url}" id="btn_generate_cert">Request Certificate</button>
+			<button class="btn generate_certs"  id="btn_generate_cert"   >Request Certificate</button>
+                        <input type="hidden" id="student" value="${student.id} "/>
+                        <input type="hidden" id="course"  value="${course.id}" />
+     
                   </div>
                   % endif
               </div>
             </div>
             % endif
           </div>
+
+%elif failed:
+     <div class="msg-content">
+           <h2 class="title">Try your best</h2>
+                 <p class="copy">Keep trying to achieve passing score before you can request a certificate. </p>
+     </div>
+%else:
+	<div class="msg-content">
+           <h2 class="title">In Progress</h2>
+                 <p class="copy">This course has no graded content, so you cannot receive a certificate for it. If you think this is an error, please contact your administrator about the issue. </p>
+     	</div>
 % endif
+
+
